# Tabs

./: .gitignore  Cargo.toml  Info.plist  Makefile  README.md
Casks/: tabs.rb
assets/: AppIcon.icns
scripts/: bundle.sh  dmg.sh  make_icon.sh  make_previews.sh  render_svg.swift  setup_signing.sh
src/: app_ui.rs  config.rs  i18n.rs  login.rs  main.rs  permissions.rs  system.rs
src/hotkey/: mod.rs  state.rs
src/ui/: layout.rs  mod.rs  overlay.rs  widgets.rs
src/windows/: ax.rs  capture.rs  focus.rs  mod.rs
