[package]
name = "tabs"
version = "0.2.3"
edition = "2024"
description = "Un commutateur de fenêtres pour macOS, libre et performant"
license = "GPL-3.0-or-later"
repository = "https://github.com/sohakolan/Tabs"
readme = "README.md"
rust-version = "1.85"

[dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-application-services = { version = "0.3.2", features = ["libc"] }
objc2-core-foundation = "0.3.2"
objc2-core-graphics = "0.3.2"
objc2-foundation = "0.3.2"
objc2-quartz-core = "0.3.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

# Binaire de release compact et rapide (cohérent avec l'objectif de légèreté).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
